add tft game link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     
       <header>
-        <div>
+        <div> 
             <img 
             src="https://github.com/dienensdiogo.png" 
             alt="Foto de Dienens Diogo em um lugar qualquer" />
@@ -68,6 +68,16 @@
                 <img
                   src="https://static-cdn.jtvnw.net/ttv-boxart/27471_IGDB-188x250.jpg"
                   alt="Imagem do Minecraft"
+                />
+              </a>
+            </li><li>
+              <a
+                href="https://www.twitch.tv/directory/game/Teamfight%20Tactics"
+                target="_blank"
+              >
+                <img
+                  src="https://static-cdn.jtvnw.net/ttv-boxart/513143-188x250.jpg"
+                  alt="Imagem do Teamfight"
                 />
               </a>
             </li>
